roles/keycloak/files/keycloak-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres-db
  namespace: keycloak
spec:
  selector:
    app: keycloak-postgressql-db
  ports:
    - name: pgql
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-postgressql-db
  namespace: keycloak
spec:
  serviceName: keycloak-postgressql-db-service
  selector:
    matchLabels:
      app: keycloak-postgressql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak-postgressql-db
    spec:
      containers:
        - name: keycloak-postgressql-db
          image: postgres:latest
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
          ports:
            - containerPort: 5432
      terminationGracePeriodSeconds: 60
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 10Gi
