roles/keycloak/files/keycloak-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-dashboard-https
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.powell.place`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
